Add opengl renderer with jogl